crates/world/tests/snapshots/corrupt/prototype-cycle.snap
---
source: crates/world/tests/corrupt_fixtures.rs
expression: outcome.output
---
document: prototype-cycle.scene.json
source root: tests/fixtures/corrupt
1 error(s), 0 warning(s)

error scene.entities.prototype-cycle at entities[0]
  prototype "torch" extends itself, directly or through a chain
