crates/world/tests/snapshots/corrupt/spawn-outwith-grid.snap
---
source: crates/world/tests/corrupt_fixtures.rs
expression: outcome.output
---
document: spawn-outwith-grid.scene.json
source root: tests/fixtures/corrupt
1 error(s), 0 warning(s)

error scene.entities.spawn-outwith-grid at entities[0]
  spawn "party-start" stands at (99, 4, 4), outwith the 32 x 32 x 32 extent
